--- a/config.yml
+++ b/config.yml
@@ -3,3 +3,4 @@ Browser: chrome
 OS: Windows
 TestCasesPath: C:\\Users\\kguttiko\\Documents\\GitHub\\keyword-driven-framework\\src\\main\\resources\\TestData\\TestCases.xlsx
 BrowserDriverPath: C:\\Users\\kguttiko\\Documents\\GitHub\\keyword-driven-framework\\Drivers\\chromedriver.exe
+screenshotspath:
