--- a/config.yml
+++ b/config.yml
@@ -1,6 +1,6 @@
 TestCases: 1-100
 Browser: chrome
 OS: Windows
-TestCasesPath: C:\\Users\\kguttiko\\Documents\\GitHub\\keyword-driven-framework\\src\\main\\resources\\TestData\\TestCases.xlsx
-BrowserDriverPath: C:\\Users\\kguttiko\\Documents\\GitHub\\keyword-driven-framework\\Drivers\\chromedriver.exe
+TestCasesPath: C:\\Flogo\\Branch\\keyword-driven-framework\\src\\main\\resources\\TestData\\TestCases.xlsx
+BrowserDriverPath: C:\\Flogo\\Branch\\keyword-driven-framework\\Drivers\\chromedriver.exe
 screenshotspath:
